modified ctrler, added food repo, added service. can now connect to database, but unable to create more than 1 instance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-server.port=8081
+server.port=8080
 spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true 
+spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.application.name=EZ Eats
+
+spring.data.mongodb.uri=mongodb+srv://isabel:Isabel123@foods.hwwumrt.mongodb.net/Food?retryWrites=true&w=majority
 
 
