added imgs to json, changed db to local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.thymeleaf.suffix=.html
 
 spring.application.name=EZ Eats
 
-spring.data.mongodb.uri=mongodb+srv://isabel:Isabel123@foods.hwwumrt.mongodb.net/Food?retryWrites=true&w=majority
-
-
+#spring.data.mongodb.uri=mongodb+srv://isabel:Isabel123@foods.hwwumrt.mongodb.net/Food?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/Food
