changed db host to atlas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ server.error.whitelabel.enabled=false
 
 spring.application.name=EZ Eats
 
-#spring.data.mongodb.uri=mongodb+srv://isabel:Isabel123@foods.hwwumrt.mongodb.net/Food?retryWrites=true&w=majority
-spring.data.mongodb.uri=mongodb://localhost:27017/Food
+spring.data.mongodb.uri=mongodb+srv://isabel:<Isabel123>@foods.hwwumrt.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb://localhost:27017/Food
